# bluecsv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  extension.toml  justfile
.github/workflows/: ci.yml  release.yml
fixtures/: sample.csv  typed.csv
languages/csv/: config.toml  highlights.scm
server/: Cargo.toml
server/bluecsv/: Cargo.toml  README.md
server/bluecsv-ls/: Cargo.toml  README.md
server/bluecsv-ls/src/: diagnostics.rs  inference.rs  lib.rs  main.rs  model.rs  transforms.rs
server/bluecsv-ls/tests/: lsp_integration.rs
server/bluecsv/benches/: csv_ops.rs
server/bluecsv/src/: lib.rs  main.rs  stats.rs  stream.rs  types.rs
src/: bluecsv.rs
