[package]
name = "bluecsv"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CSV transforms (align/unalign) for the Blue CSV Zed extension."

[lib]
path = "src/lib.rs"

[[bin]]
name = "bluecsv"
path = "src/main.rs"
