[package]
name = "bluecsv"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CSV transforms (align/unalign) for the Blue CSV Zed extension."
readme = "README.md"
documentation = "https://docs.rs/bluecsv"
keywords = ["csv", "cli", "zed"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "bluecsv"
path = "src/main.rs"
